# mal-cli

./: '  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: build.yaml
server/: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml
server/src/: main.rs
server/templates/: error.html  success.html
src/: app.rs  main.rs  mal.rs  models.rs  ui.rs
src/config/: README.md  mod.rs  navigation.rs  network.rs  player.rs  theme.rs
src/controller/: input_handler.rs  mod.rs
src/handlers/: input_handler.rs  mod.rs
src/mal/: mod.rs  network.rs  oauth.rs
src/mal/models/: anime.rs  mod.rs  user.rs
src/models/: anime.rs  mod.rs
src/player/: allanime.rs  mod.rs
src/screens/: filter.rs  info.rs  launch.rs  list.rs  login.rs  mod.rs  overview.rs  profile.rs  screenTemplate.rs  screen_template.rs  search.rs  seasons.rs  settings.rs
src/screens/widgets/: animebox.rs  button.rs  image.rs  infobox.rs  kittytest.rs  mod.rs  navbar.rs  navigatable.rs  popup.rs  printable.rs
src/templates/: success.html
src/ui/: info.rs  launch.rs  list.rs  login.rs  main.rs  mod.rs  overview.rs  profile.rs  seasons.rs  settings.rs
src/ui/widgets/: animebox.rs  button.rs  image.rs  mod.rs  navbar.rs
src/utils/: colorSelect.rs  customThreadProtocol.rs  errorBus.rs  functionStreaming.rs  imageManager.rs  input.rs  mod.rs  store.rs  stringManipulation.rs  terminalCapabilities.rs
testing/: main.rs
