[package]
name = "mal-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
color-eyre = "0.6.3"
crossterm = "0.28.1"
dotenvy = "0.15.7"
image = {version = "0.25.6", features = ["gif"]}
itertools = "0.14.0"
ratatui = "0.29.0"
ratatui-image = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tachyonfx = "0.13.0"
ureq = { version = "3.0.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rouille = "3.6.2"
url = "2.5.4"
open = "5.3.2"
once_cell = "1.21.3"
base64 = "0.22.1"
crossbeam = "0.8.4"
chrono = "0.4.41"
cached = "0.55.1"
tui-widgets = "0.4.1"
regex = "1.11.1"
